Fix scopes styling

--- a/app/assets/stylesheets/formadmin/components/_tools.scss
+++ b/app/assets/stylesheets/formadmin/components/_tools.scss
@@ -13,7 +13,7 @@
     width: auto !important;
   }
 
-  .scopes {
+  .scopes ul {
     background-color: $white;
     border: 1px solid $silver;
     border-radius: $radius;
