--- a/app/assets/stylesheets/formadmin/layouts/_main.scss
+++ b/app/assets/stylesheets/formadmin/layouts/_main.scss
@@ -41,23 +41,44 @@
     }
   }
 
-  // Medias
-  @media #{$largest-phone-screen} {
-    padding: 15px 15px 0;
-
-    &.with_sidebar #main_content {
-      margin-right: 0;
-    }
-
-    #main_content_wrapper {
-      float: none;
-    }
-
+  // Filters Toggle
+  &:not(.with_sidebar) {
     #sidebar {
-      float: none;
-      margin-left: 0;
-      margin-top: 40px;
-      width: 100%;
+      display: none;
     }
   }
+
+  // Medias
+  @media #{$largest-tablet-screen} {
+    display: flex;
+    flex-direction: column;
+
+    #sidebar {
+      order: -1;
+      margin: 0 -.5rem;
+      width: auto;
+    }
+
+    #sidebar > div {
+      width: auto;
+      margin: 20px .5rem;
+      flex: 1 1 100%;
+    }
+
+    #sidebar > div:first-child {
+      flex:  0 0 auto
+    }
+
+    #main_content_wrapper #main_content {
+      margin: 0
+    }
+
+    .table_tools {
+      margin: 1rem 0;
+    }
+  }
+}
+
+#toggle_filters.is-toggle {
+  background-color: #e2e2e2;
 }
